@@ -1,3 +1,7 @@
+2007-06-06  Pascal Terjan  <pterjan@linuxfr.org>
+
+	* signal-spam.c, report.c: log some errors
+
 2007-06-04  Pascal Terjan  <pterjan@linuxfr.org>
 
 	- 0.0.3
